# ankiconv

./: .pre-commit-config.yaml  README.md  pyproject.toml
ankiconv/: cli.py  converter.py
